Fixed issues with Font size on mobile devices.

--- a/theme/assets/less/custom-variables.less
+++ b/theme/assets/less/custom-variables.less
@@ -15,9 +15,13 @@
 @header-padding-top: 20px;
 
 //Small
-@font-size-base-small: 13px;
-@font-size-h1-small: 13px;
-@font-size-h2-small: @font-size-base-small;
+@font-size-base-small: 12pt;
+@font-size-h1-small: @font-size-base-small * 2.5;
+@font-size-h2-small: @font-size-base-small * 2;
+@font-size-h3-small: @font-size-base-small * 1.5;
+@font-size-h4-small: @font-size-base-small * 1.3;
+@font-size-h5-small: @font-size-base-small * 1.1;
+@font-size-h6-small: @font-size-base-small * 1;
 
 //Single Article
 @article-padding: 50px 50px 0;
