--- a/theme/assets/less/small-screen.less
+++ b/theme/assets/less/small-screen.less
@@ -22,15 +22,36 @@
 
   // == Type
   h1 {
-    font-size: 20px;
+    font-size: @font-size-h1-small !important;
   }
 
-  h2, a, p, .article-heading {
-    font-size: @font-size-base-small !important;
-  }
-  h2{
+  h2 {
+    font-size: @font-size-h2-small !important;
     margin-top: 0;
     font-weight: bold;
+  }
+
+  h3 {
+    font-size: @font-size-h3-small !important;;
+  }
+
+  h4 {
+    font-size: @font-size-h4-small !important;;
+  }
+
+  h5 {
+    font-size: @font-size-h5-small !important;;
+  }
+
+  h6 {
+    font-size: @font-size-h6-small !important;;
+  }
+
+  a,
+  p,
+  li,
+  .article-heading {
+    font-size: @font-size-base-small !important;
   }
 
   .page-header {
